# kevinai

./: README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/models/: __init__.py  session.py  tool.py
backend/app/services/: __init__.py  agent.py  llm.py  model_router.py  session.py
backend/app/tools/: __init__.py  base.py  bash.py  browser.py  code_validator.py  data_analyst.py  deploy.py  file_ops.py  git.py  github_api.py  knowledge.py  lsp.py  mcp.py  screen_recording.py  search.py  task.py  thinking.py  web.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AppHeader.tsx  BrowserPreview.tsx  ChatPanel.tsx  FileExplorer.tsx  Header.tsx  Knowledge.tsx  LandingPage.tsx  MCPMarketplace.tsx  SessionSidebar.tsx  Sidebar.tsx  Terminal.tsx  TodoPanel.tsx  WorkspaceView.tsx  index.ts
frontend/src/hooks/: useSession.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
